<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recipe"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/tvCookingHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"

        android:textAlignment="center"

        android:textColor="#3E5659"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:text="Login"
        android:textColor="#FF3E5659"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvLogin"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_custom"
        android:hint="Enter Username or Email"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_custom"
        android:hint="Enter Password"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etPassword"
        android:layout_margin="10dp"
        android:background="@drawable/btn_custom"
        android:paddingLeft="20dp"
        android:text="Login"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="Don't have an account? "
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/tvInfo"
        android:text="@string/register"
        android:textColor="#2196F3" />

</RelativeLayout>