<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/miRecipe"
        android:icon="@drawable/ic_recipe"
        android:title="Recipe" />

    <item
        android:id="@+id/miFav"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="Favourite" />

    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="You" />

</menu>