...
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:src="@drawable/noimg" />

        <TextView
            android:id="@+id/tvRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe"
            android:textAlignment="center"
            android:textColor="#FF9100"
            android:textSize="18sp"
...
